# rust-berlin-leptos

./: .gitignore  Cargo.toml  Trunk.toml  docker-compose.yaml  graphql.config.yml  index.html  readme.md
client/: Cargo.toml  Trunk.toml  index.html
client-leptos/: Cargo.toml
client-leptos/graphql/: meetup_url.graphql  schema.graphql
client-leptos/src/: auth_config.rs  main.rs
client-leptos/src/component/: app.rs  clock_component.rs  event_table.rs  event_table_modal.rs  footer.rs  keycloak_access_admin.rs  keycloak_catcher.rs  mod.rs  navigation_bar.rs  navigation_user_menu.rs
client-leptos/src/graphql/: meetup_url_graphql.rs  mod.rs
client-leptos/src/model/: filter.rs  meetup_url_edit.rs
client-ratatui/: Cargo.toml
client-ratatui/graphql/: meetup_url.graphql  schema.graphql
client-ratatui/src/: auth.rs  main.rs
client-ratatui/src/components/: app.rs  body.rs  filter_modal.rs  footer.rs  header.rs  login.rs  mod.rs
client-ratatui/src/graphql/: meetup_url_graphql.rs  mod.rs
client-ratatui/src/model/: event.rs  filter_form.rs  filter_graphql.rs  mod.rs
client/graphql/: meetup_url.graphql  schema.graphql
client/src/: main.rs
client/src/component/: app.rs  clock_component.rs  event_table.rs  event_table_delete.rs  event_table_edit.rs  event_table_modal.rs  footer.rs  mod.rs
client/src/components/: app.rs  clock_component.rs  event_table.rs  footer.rs  mod.rs  navigation_bar.rs
client/src/graphql/: meetup_url_graph_ql.rs  meetup_url_graphql.rs  mod.rs  subscription_graphql.rs
client/src/model/: event.rs  meetup_url_edit.rs  mod.rs
client/src/models/: event.rs  mod.rs
data/: data.json
docs/: index.html  rust-berlin-leptos-dda799be51577435.js  rust-berlin-leptos-dda799be51577435_bg.wasm  tailwind-c226d3fe20627e28.css
infrastructure/graphql/: clock_subscription.graphql  header.json  init_database.graphql  insert_url.graphql  modify_url.graphql  select_urls.graphql
infrastructure/http/: authentication.http  init_db.http  select.http
infrastructure/keycloak/: Dockerfile  keycloak.md  realm.json
infrastructure/postgres/: init.sql
keycloak-wasm-auth/: cargo.toml
keycloak-wasm-auth/src/: auth.rs  error.rs  lib.rs  oidc.rs  pkce.rs  storage.rs  validation.rs
keycloak-wasm-auth/src/tests/: auth_tests.rs  mod.rs  oidc_tests.rs  pkce_tests.rs  validation_tests.rs
keycloak-wasm-auth/src/types/: claims.rs  config.rs  mod.rs  params.rs  token.rs
server/: Cargo.toml
server/src/: auth.rs  main.rs
server/src/config/: db_connection.rs  mod.rs
server/src/graphql/: domain.rs  mod.rs  mutation.rs  query.rs  subscription.rs
server/src/model/: meetup_url.rs  mod.rs
server/src/repository/: mod.rs  url_repository.rs
server/src/service/: file_import.rs  init_database.rs  mod.rs
server/static/: index.html  rust-berlin-leptos-4ee99718728ab32e.js  rust-berlin-leptos-4ee99718728ab32e_bg.wasm  rust-berlin-leptos-7a6a9f219c87d073.js  rust-berlin-leptos-92434802916eeae7.js  rust-berlin-leptos-a9507898ec53e9bd.js  rust-berlin-leptos-a9507898ec53e9bd_bg.wasm  rust-berlin-leptos-a9e9181433dfe807.js  rust-berlin-leptos-acfc457c218afaf4.js  rust-berlin-leptos-acfc457c218afaf4_bg.wasm  rust-berlin-leptos-ae41b4a9f9429ca6.js  rust-berlin-leptos-ae41b4a9f9429ca6_bg.wasm  rust-berlin-leptos-c1663a5c3e0c4c0e.js  rust-berlin-leptos-d36c86c97e0924a8.js  rust-berlin-leptos-d36c86c97e0924a8_bg.wasm  rust-berlin-leptos-e92937153d9ad302.js  rust-berlin-leptos-e92937153d9ad302_bg.wasm  tailwind-5074fd11e6607a5e.css  tailwind-6483b064b66cf74f.css  tailwind-6acfe955a7b25a78.css  tailwind-6d194711ce737bf8.css  tailwind-8839dbfe74ff4b6f.css  tailwind-e35281e8d0ca78a2.css
src/: main.rs
src/components/: app.rs  banner.rs  event_table.rs  footer.rs  mod.rs
src/models/: event.rs
