[package]
name = "rust-berlin-leptos"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
thaw = { version = "0.5.0-beta", features = ["csr"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde", "wasm-bindgen"] }

graphql_client = { version = "0.14.0", features = ["reqwest"] }
# reqwest 12.x not compatible with graphql_client
reqwest = "0.11.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
ws_stream_wasm = "0.7.5"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen = "0.2.105"
web-sys = "0.3.82"
serde_derive = "1.0.228"