[package]
name = "rust-berlin-ratatui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
graphql_client = "0.14.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }