[package]
name = "rust-berlin-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
surrealdb = { version = "2.4.0" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["http1", "macros", "tokio"] }

futures = { version = "0.3.31" }
juniper = { version = "0.17.0", default-features = false }
juniper_axum = { version = "0.3.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.5.0", features = ["graphql-transport-ws", "graphql-ws"] }
tracing-subscriber = "0.3.22"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
tracing = "0.1.43"

chrono = { version = "0.4.42", features = ["serde"] }