[package]
name = "rust-berlin-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
surrealdb = { version = "2.4.0" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["http1", "macros", "tokio"] }

async-graphql = { version = "7.0.17", default-features = false, features = ["tracing", "opentelemetry", "graphiql", "playground"] }
async-graphql-axum = { version = "7.0.17", default-features = false }
tracing-subscriber = "0.3.22"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
tracing = "0.1.43"

chrono = { version = "0.4.42", features = ["serde"] }